<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/artRowNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/artRowArtistNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:text="TextView" />
        <TextView
            android:id="@+id/artRowYearText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:text="TextView" />
    </LinearLayout>
</LinearLayout>